data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3390.wast
;; 9. **Recursion-based Infinite Loop with Missing Call Arguments**: Implement a recursive function initialization inside a loop leading to calls where arguments are missing, testing recursive call argument validation and stack handling to prevent infinite recursion loops.

(assert_invalid
  (module
    (func $recursive (param i32)
      (if (i32.eqz (local.get 0))
        (then (call $recursive (local.get 0)))))
    (type $sig (func (param i32)))
    (table funcref (elem $recursive))
    (func $test-loop
      (loop
        (call_indirect (type $sig) (i32.const 0)))))
  "type mismatch"
)